@@ -2,16 +2,11 @@ package uk.gov.hmcts.ccd;
 
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.JsonNode;
-import com.github.dockerjava.api.model.ExposedPort;
-import com.github.dockerjava.api.model.HostConfig;
-import com.github.dockerjava.api.model.PortBinding;
-import com.github.dockerjava.api.model.Ports;
 import com.github.tomakehurst.wiremock.client.WireMock;
 import com.google.common.collect.Lists;
 import lombok.extern.slf4j.Slf4j;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -24,18 +19,19 @@ import org.junit.jupiter.params.provider.ArgumentsProvider;
 import org.junit.jupiter.params.provider.ArgumentsSource;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.MediaType;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.test.context.DynamicPropertyRegistry;
+import org.springframework.test.context.DynamicPropertySource;
 import org.springframework.test.context.jdbc.Sql;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
-import org.testcontainers.containers.wait.strategy.LogMessageWaitStrategy;
+import org.testcontainers.containers.wait.strategy.HttpWaitStrategy;
 import org.testcontainers.elasticsearch.ElasticsearchContainer;
 import uk.gov.hmcts.ccd.data.casedetails.SecurityClassification;
 import uk.gov.hmcts.ccd.data.casedetails.search.MetaData;
@@ -198,33 +194,40 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
     private MockMvc mockMvc;
 
-    @BeforeAll
-    public static void initElastic(@Value("${search.elastic.version}") final String elasticVersion,
-                                   @Value("${search.elastic.port}") final int httpPortValue)
-        throws IOException, InterruptedException {
-
-        log.info("Starting Elastic search...");
+    static {
+        String elasticVersion = System.getProperty("search.elastic.version", "9.0.4");
         container = new ElasticsearchContainer("docker.elastic.co/elasticsearch/elasticsearch:" + elasticVersion)
             .withEnv("discovery.type", "single-node")
             .withExposedPorts(9200)
-            .withCreateContainerCmdModifier(cmd -> cmd.withHostConfig(
-                new HostConfig().withPortBindings(
-                    new PortBinding(Ports.Binding.bindPort(httpPortValue), new ExposedPort(9200))
-                )
-            ));
+            .withEnv("xpack.security.enabled", "false")
+            .withEnv("xpack.security.transport.ssl.enabled", "false")
+            .withEnv("ES_JAVA_OPTS", "-Xms1g -Xmx1g");
 
-        String regex = ".*(\"message\":\\s?\"started\".*|] started\n$)";
-        container.setWaitStrategy((new LogMessageWaitStrategy())
-            .withRegEx(regex)
+        container.setWaitStrategy(new HttpWaitStrategy()
+            .forPath("/_cluster/health")
+            .forPort(9200)
+            .forStatusCode(200)
             .withStartupTimeout(Duration.ofMinutes(3)));
 
         container.start();
-        log.info("Elastic search started.");
-        ElasticsearchITSetup configurer = new ElasticsearchITSetup(httpPortValue);
+        int mappedPort = container.getMappedPort(9200);
+        log.info("Elastic search started on port {}", mappedPort);
+
+        ElasticsearchITSetup configurer = new ElasticsearchITSetup(mappedPort);
         log.info("Elastic search adding indexes.");
-        configurer.initIndexes();
-        log.info("Elastic search adding data.");
-        configurer.initData();
+        try {
+            configurer.initIndexes();
+            log.info("Elastic search adding data.");
+            configurer.initData();
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to initialize Elasticsearch test data", e);
+        }
+    }
+
+    @DynamicPropertySource
+    static void elasticsearchProperties(DynamicPropertyRegistry registry) {
+        registry.add("search.elastic.hosts", () -> container.getHost());
+        registry.add("search.elastic.port", () -> container.getMappedPort(9200));
     }
 
     @AfterAll
@@ -282,7 +285,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 null);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getCases().size(), is(1)),
@@ -308,7 +311,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 null);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getCases().size(), is(1)),
@@ -355,7 +358,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 null);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getCases().size(), is(1)),
@@ -384,7 +387,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 "TEST");
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertUseCaseHeadersUserRole(caseSearchResultViewResource.getHeaders()),
@@ -708,11 +711,11 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(headers.size(), is(1)),
-                () -> assertThat(headers.get(0).getMetadata().getJurisdiction(), is(AUTOTEST_1)),
-                () -> assertThat(headers.get(0).getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
-                () -> assertThat(headers.get(0).getCases().size(), is(1)),
-                () -> assertThat(headers.get(0).getCases().get(0), is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(headers.get(0).getFields().size(), is(24)),
+                () -> assertThat(headers.getFirst().getMetadata().getJurisdiction(), is(AUTOTEST_1)),
+                () -> assertThat(headers.getFirst().getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
+                () -> assertThat(headers.getFirst().getCases().size(), is(1)),
+                () -> assertThat(headers.getFirst().getCases().getFirst(), is(DEFAULT_CASE_REFERENCE)),
+                () -> assertThat(headers.getFirst().getFields().size(), is(24)),
                 () -> expectedFields.forEach(f -> assertThat(headers.get(0).getFields(),
                     hasItem(hasProperty(CASE_FIELD_ID,
                         is(f)))))
@@ -725,12 +728,12 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(headers.size(), is(1)),
-                () -> assertThat(headers.get(0).getMetadata().getJurisdiction(), is(AUTOTEST_1)),
-                () -> assertThat(headers.get(0).getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
-                () -> assertThat(headers.get(0).getCases().size(), is(1)),
-                () -> assertThat(headers.get(0).getCases().get(0), is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(headers.get(0).getFields().size(), is(5)),
-                () -> expectedFields.forEach(f -> assertThat(headers.get(0).getFields(),
+                () -> assertThat(headers.getFirst().getMetadata().getJurisdiction(), is(AUTOTEST_1)),
+                () -> assertThat(headers.getFirst().getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
+                () -> assertThat(headers.getFirst().getCases().size(), is(1)),
+                () -> assertThat(headers.getFirst().getCases().getFirst(), is(DEFAULT_CASE_REFERENCE)),
+                () -> assertThat(headers.getFirst().getFields().size(), is(5)),
+                () -> expectedFields.forEach(f -> assertThat(headers.getFirst().getFields(),
                     hasItem(hasProperty(CASE_FIELD_ID,
                         is(f)))))
             );
@@ -744,12 +747,12 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(headers.size(), is(1)),
-                () -> assertThat(headers.get(0).getMetadata().getJurisdiction(), is(AUTOTEST_1)),
-                () -> assertThat(headers.get(0).getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
-                () -> assertThat(headers.get(0).getCases().size(), is(1)),
-                () -> assertThat(headers.get(0).getCases().get(0), is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(headers.get(0).getFields().size(), is(10)),
-                () -> expectedFields.forEach(f -> assertThat(headers.get(0).getFields(),
+                () -> assertThat(headers.getFirst().getMetadata().getJurisdiction(), is(AUTOTEST_1)),
+                () -> assertThat(headers.getFirst().getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
+                () -> assertThat(headers.getFirst().getCases().size(), is(1)),
+                () -> assertThat(headers.getFirst().getCases().getFirst(), is(DEFAULT_CASE_REFERENCE)),
+                () -> assertThat(headers.getFirst().getFields().size(), is(10)),
+                () -> expectedFields.forEach(f -> assertThat(headers.getFirst().getFields(),
                     hasItem(hasProperty(CASE_FIELD_ID,
                         is(f)))))
             );
@@ -911,7 +914,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getReference(), is(1589460099608690L))
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getReference(), is(1589460099608690L))
                 );
             }
 
@@ -1249,7 +1252,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getCaseTypeId(), is(CASE_TYPE_B))
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getCaseTypeId(), is(CASE_TYPE_B))
                 );
             }
 
@@ -1387,7 +1390,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
 
         private Map<String, JsonNode> getFirstCaseData(CaseSearchResult caseSearchResult) {
-            return caseSearchResult.getCases().get(0).getData();
+            return caseSearchResult.getCases().getFirst().getData();
         }
 
         private CaseDetails getCase(CaseSearchResult caseSearchResult, Long reference) {
@@ -1565,7 +1568,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 CaseSearchResult caseSearchResult = executeRequest(searchRequest, CASE_TYPE_A);
 
-                CaseDetails caseDetails = caseSearchResult.getCases().get(0);
+                CaseDetails caseDetails = caseSearchResult.getCases().getFirst();
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
                     () -> assertExampleCaseMetadata(caseDetails),
@@ -1724,7 +1727,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result1.getCaseManagementCategoryName(), is("Category label Order-02")),
                 () -> assertThat(result1.getCaseNameHmctsInternal(), is("Name Internal 01")),
                 () -> assertThat(result1.getOtherReferences().size(), is(1)),
-                () -> assertThat(result1.getOtherReferences().get(0), is(OTHER_REFERENCE_GLOBAL_SEARCH)),
+                () -> assertThat(result1.getOtherReferences().getFirst(), is(OTHER_REFERENCE_GLOBAL_SEARCH)),
                 // verify ref-data from: `/resources/mappings/refdata/get_building_locations.json`
                 () -> assertThat(result1.getBaseLocationId(), is(CASE_MANAGEMENT_BASE_LOCATION_GLOBAL_SEARCH)),
                 () -> assertThat(result1.getBaseLocationName(), is("54 TEST ROAD")),
@@ -1830,7 +1833,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result.getResultInfo().getCasesReturned(), is(1)),
                 () -> assertThat(result.getResults().size(), is(1))
             );
-            GlobalSearchResponsePayload.Result result1 = result.getResults().get(0);
+            GlobalSearchResponsePayload.Result result1 = result.getResults().getFirst();
             assertAll(
                 () -> assertThat(result1.getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_01)),
 
@@ -2164,7 +2167,6 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
         return sortCriteria;
     }
-    
 
     private void stubCaseTypeRoleAssignments(String... caseTypes) {
         if (applicationParams.getEnableAttributeBasedAccessControl()) {
